# swinburne_humanoid

./: .gitignore  README.md  mic.py
src/asr_vosk/: CHANGELOG.rst  README.md  package.xml  setup.py
src/asr_vosk/asr_vosk/: mic.py  node_vosk.py  pal_node_vosk.py
src/asr_vosk/config/: 00-defaults.yml  asr_vosk_analyzers.yaml
src/asr_vosk/launch/: asr_vosk.launch.py  asr_vosk_with_mic_and_matcher.launch.py
src/asr_vosk/localized_nodes/: asr_vosk
src/asr_vosk/module/: asr_vosk  asr_vosk_module.yaml
src/asr_vosk/test/: test_vosk_asr.py
src/asr_vosk/test/data/en_US/bag_0/: bag_0.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_1/: bag_1.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_10/: bag_10.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_11/: bag_11.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_12/: bag_12.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_13/: bag_13.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_14/: bag_14.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_15/: bag_15.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_16/: bag_16.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_2/: bag_2.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_3/: bag_3.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_4/: bag_4.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_5/: bag_5.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_6/: bag_6.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_7/: bag_7.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_8/: bag_8.db3  metadata.yaml
src/asr_vosk/test/data/en_US/bag_9/: bag_9.db3  metadata.yaml
src/asr_vosk_language_models/: README.md  generate_language_packages.py  vosk_models.csv
src/asr_vosk_language_models/src/asr_vosk_language_model_en_us_gigaspeech/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/asr_vosk_language_models/src/asr_vosk_language_model_en_us_gigaspeech/config/: vosk_model.yml
src/asr_vosk_language_models/src/asr_vosk_language_model_en_us_small/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/asr_vosk_language_models/src/asr_vosk_language_model_en_us_small/config/: vosk_model.yml
src/asr_vosk_language_models/tpl/: CMakeLists.txt.tpl  package.xml.tpl
src/asr_vosk_language_models/tpl/config/: vosk_model.yml.tpl
src/hri_body_detect/: CHANGELOG.rst  package.xml  setup.py
src/hri_body_detect/config/: hri_body_detect_analyzers.yaml
src/hri_body_detect/hri_body_detect/: multibody_detector.py  rs_to_depth.py
src/hri_body_detect/launch/: hri_body_detect.launch.py
src/hri_engagement/: CHANGELOG.rst  package.xml  setup.py
src/hri_engagement/config/: 00-default.yaml  hri_engagement  hri_engagement_analyzers.yaml
src/hri_engagement/hri_engagement/: engagement_node.py
src/hri_engagement/launch/: hri_engagement.launch.py
src/hri_face_body_matcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/hri_face_body_matcher/config/: hri_face_body_matcher_analyzers.yaml
src/hri_face_body_matcher/launch/: hri_face_body_matcher.launch.py
src/hri_face_detect/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg
src/hri_face_detect/config/: 00-defaults.yml  hri_face_detect_analyzers.yaml
src/hri_face_detect/hri_face_detect/: node_face_detect.py
src/hri_face_detect/launch/: face_detect.launch.py
src/hri_face_identification/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/hri_face_identification/config/: 00-defaults.yml  hri_face_identification_analyzers.yaml
src/hri_face_identification/include/hri_face_identification/: node_face_identification.hpp
src/hri_face_identification/launch/: hri_face_identification.launch.py
src/hri_face_identification/module/: hri_face_identification_module.yaml
src/hri_face_identification/src/hri_face_identification/: node_face_identification.cpp
src/hri_person_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/hri_person_manager/config/: 00-defaults.yml  hri_person_manager_analyzers.yaml
src/hri_person_manager/include/hri_person_manager/: node_person_manager.hpp
src/hri_person_manager/launch/: person_manager.launch.py
src/hri_person_manager/module/: hri_person_manager.yaml
src/hri_person_manager/src/hri_person_manager/: managed_person.cpp  node_person_manager.cpp
src/hri_person_manager/test/: test_node_person_manager.cpp
src/hri_voice_face_matcher/: README.md  package.xml  setup.cfg  setup.py
src/hri_voice_face_matcher/hri_voice_face_matcher/: node_voice_face_matcher.py
src/hri_voice_face_matcher/launch/: hri_voice_face_matcher.launch.py
src/hri_voice_face_matcher/resource/: hri_voice_face_matcher
src/jetson_face_detect/: package.xml  setup.cfg  setup.py
src/jetson_face_detect/jetson_face_detect/: compressed_image_decoder.py  face_tracker.py  ros4hri_face_node.py  scrfd_trt_detector.py
src/jetson_face_detect/launch/: body_face_perception_stack.launch.py  face_perception_stack.launch.py  ros4hri_face_node.launch.py
src/x2_description/: CMakeLists.txt  package.xml
src/x2_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/x2_description/scripts/: base_footprint_projector.py
src/x2_description/urdf/: x2_fist.urdf  x2_hand.urdf  x2_ultra.urdf  x2_ultra_simple_collision.urdf
