<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetson_face_detect</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="agi@todo.todo">agi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>hri_face_identification</depend>
  <depend>hri_engagement</depend>
  <depend>hri_body_detect</depend>
  <depend>hri_face_body_matcher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
